[metadata]
name = lmtools
description = Package of tools and extensions developed for the Lifemapper computations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/specifysystems/lmtools
author = Specify Lifemapper Team
author_email = cjgrady@ku.edu
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/specfysystems/lmtools/issues

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = lmtools

[options.entry_points]
console_scripts =
    create_sdm = lmtools.tools.create_sdm:cli

[versioneer]
vcs = git
style = pep440-pre
versionfile_source = lmtools/_version.py
versionfile_build = lmtools/_version.py
tag_prefix = ''
